Automatically backed up by Learn

--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -2,6 +2,7 @@
 
 <%= form_tag new_student_path do %>
 
-
+  <label>First name:</label>
+  <%= text_field_tag :'students[first_name]' %>
 
 <% end %>
