--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -3,6 +3,6 @@
 <%= form_tag new_student_path do %>
 
   <label>First name:</label>
-  <%= text_field_tag :'student[first_name]' %>
+  <%= text_field_tag :'first_name' %>
 
 <% end %>
