Automatically backed up by Learn

--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -5,4 +5,7 @@
   <label>First name:</label>
   <%= text_field_tag :'first_name' %>
 
+  <label>Last name:</label>
+  <%= text_field_tag :'last_name' %>
+
 <% end %>
