--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -8,6 +8,8 @@
   <label>Last name:</label>
   <%= text_field_tag :'last_name' %>
 
-  <%= submit_tag "Submit Student" %>  
+  <%= submit_tag "Submit Student" %>
 
 <% end %>
+
+params.inspect
