--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Student Form</h1>
 
-<%= form_tag create_path do %>
+<%= form_tag new_student_path do %>
 
   <label>First name:</label>
   <%= text_field_tag :'first_name' %>
